--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 </head>
 
 <body class="bg-light">
-    <div class="container mt-5">
-        <div class="row">
+    <div class="container">
+        <div class="row pt-5">
             <div class="col-8">
                 <h1>Chat with Llama2</h1>
             </div>
