added padding to end of chat history and autoscroll to chat history element

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body class="bg-light">
     <div class="container">
-        <div class="row pt-5">
+        <div class="row pt-3">
             <div class="col-8">
                 <h1>Chat with Llama2</h1>
             </div>
@@ -31,7 +31,7 @@
         </div>
         <div id="chat-container" class="card">
             <div class="card-body">
-                <div id="chat-history"></div>
+                <div id="chat-history" class="py-2"></div>
             </div>
         </div>
         <div class="input-group mt-3" id="input-area">
