--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
         <div id="chat-container" class="card">
             <div class="card-body">
-                <div id="chat-history" class="py-2"></div>
+                <div id="chat-history" class="pb-2"></div>
             </div>
         </div>
         <div class="input-group mt-3" id="input-area">
