centered input area

--- a/index.html
+++ b/index.html
@@ -37,9 +37,11 @@
             </div>
         </div>
     </div>
-    <div class="input-group p-3" id="input-area">
-        <textarea class="form-control" id="user-input" placeholder="Type your question here..."></textarea>
-        <button id="send-button" class="btn btn-primary">Send</button>
+    <div class="container p-3" id="input-area">
+        <div class="input-group">
+            <textarea class="form-control" id="user-input" placeholder="Type your question here..."></textarea>
+            <button id="send-button" class="btn btn-primary">Send</button>
+        </div>
     </div>
 
     <script src="api.js"></script>
