user text input is card with background, padding auto-adjusts when resized

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </div>
         </div>
     </div>
-    <div class="container p-3" id="input-area">
+    <div class="container p-2 bg-light card" id="input-area">
         <div class="input-group">
             <textarea class="form-control" id="user-input" placeholder="Type your question here..."></textarea>
             <button id="send-button" class="btn btn-primary">Send</button>
