support custom API URLs (including https)

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
             <div id="model-controls" class="col-md-4 col-12 text-md-end text-start mb-3">
                 <div class="d-flex flex-column align-items-md-end align-items-start">
 
-                    <div id="host-address-select" style="display: none;">
+                    <div id="host-address-select">
                         <div class="d-flex align-items-center mb-2">
-                            <label for="host-address" class="form-label me-2" style="font-size: smaller;">Hostname (port 11434):</label>
-                            <input id="host-address" class="form-control" type="text" placeholder="localhost" style="width: auto;"></select>
+                            <label for="host-address" class="form-label me-2" style="font-size: smaller;">Hostname</label>
+                            <input id="host-address" class="form-control" type="text" placeholder="http://localhost:11434" style="width: auto;"></select>
                         </div>
                     </div>
 
