added viewport meta tag
Added the viewport meta tag to the head section so that the UI is scaled readably on small screens.

see: https://developer.mozilla.org/en-US/docs/Web/HTML/Viewport_meta_tag

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>Chat with Llama2</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <link href="resources/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
